# PieChartsDetection

./: .gitignore  README.md  area_utils.py  data_loading_example.ipynb  edge_detection.py  make_submission.py  pie_charts.py  preview.py  pyproject.toml  requirements.txt  segment_circle.py  test.py  train_model.py  utils.py
configs/: config1.yml
dependencies/: cpools-0.0.0-cp310-cp310-linux_x86_64.whl  cpools-0.1-cp310-cp310-linux_x86_64.whl
notebooks/: data_loading_example.ipynb  test_NMS.ipynb  test_combined.ipynb  test_model.ipynb
report/: algorithm.md  data_exploration.md
src/piecharts/data/: dataset.py
src/piecharts/nn/: CenterPool.py  center_pool.py
src/piecharts/nn/_cpools/src/: bottom_pool.cpp  top_pool.cpp
src/piecharts/nn/layers/: center_pool.py
src/piecharts/nn/layers/cpools/: setup.py
src/piecharts/nn/layers/cpools/cpools/: bottom_pool.cpp  left_pool.cpp  right_pool.cpp  top_pool.cpp
src/piecharts/nn/models/: config.py  smp_models.py
src/piecharts/training/: train.py
src/piecharts/utils/: area_utils.py  datatypes.py  image.py  nms_utils.py
